# libsfz

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD.gn  COPYING  Makefile  configure  defaults.gypi  libsfz.gyp  wscript
.github/workflows/: ci.yaml  test.yaml
include/all/sfz/: Bytes.hpp  CString.hpp  Compare.hpp  Encoding.hpp  Exception.hpp  Foreach.hpp  Format.hpp  Formatter.hpp  Integer.hpp  LinkedPtr.hpp  NetworkBytes.hpp  Os.hpp  PosixFormatter.hpp  PrintItem.hpp  PrintTarget.hpp  Range.hpp  ReadItem.hpp  ReadSource.hpp  ScopedPtr.hpp  Sha1.hpp  SmartPtr.hpp  String.hpp  StringUtilities.hpp  WriteItem.hpp  WriteTarget.hpp  algorithm.hpp  args.hpp  bytes.hpp  digest.hpp  encoding.hpp  endian.hpp  exception.hpp  foreach.hpp  format.hpp  json.hpp  macros.hpp  memory.hpp  optional.hpp  os.hpp  print.hpp  (+7 more)
include/linux/sfz/: args.hpp  format.hpp  os.hpp  ref-count.hpp  sfz.hpp
include/mac/sfz/: ReferenceCounted.hpp  digest.hpp  file.hpp  optional.hpp  range.hpp  ref-count.hpp  string-utils.hpp
include/posix/sfz/: Io.hpp  MappedFile.hpp  ScopedFd.hpp  file.hpp  io.hpp
include/sfz/: BinaryReader.hpp  BinaryWriter.hpp  Bytes.hpp  CString.hpp  Encoding.hpp  Exception.hpp  Foreach.hpp  Format.hpp  Formatter.hpp  Macros.hpp  MappedFile.hpp  PosixFormatter.hpp  PrintItem.hpp  PrintTarget.hpp  Range.hpp  ReadItem.hpp  ReferenceCounted.hpp  Rune.hpp  ScopedFd.hpp  Sha1.hpp  SmartPtr.hpp  String.hpp  StringUtilities.hpp  WriteItem.hpp  WriteTarget.hpp  sfz.hpp
include/win/sfz/: encoding.hpp  file.hpp  string-map.hpp
src/all/: Encoding.cpp  Encoding.test.cpp  Formatter.test.cpp  LinkedPtr.cpp  Os.test.cpp  PrintItem.test.cpp  ReadItem.cpp  Sha1.cpp  Sha1.test.cpp  String.cpp  StringUtilities.cpp  StringUtilities.test.cpp  WriteItem.test.cpp
src/all/sfz/: Bytes.cpp  Bytes.test.cpp  CString.cpp  Encoding.cpp  Encoding.test.cpp  Exception.cpp  Foreach.test.cpp  Format.cpp  Formatter.cpp  Formatter.test.cpp  Integer.cpp  Io.test.cpp  LinkedPtr.cpp  LinkedPtr.test.cpp  NetworkBytes.cpp  Os.test.cpp  PosixFormatter.hpp  PrintItem.cpp  PrintItem.test.cpp  ReadItem.cpp  ReadItem.test.cpp  Sha1.cpp  Sha1.test.cpp  String.cpp  String.test.cpp  StringUtilities.cpp  StringUtilities.test.cpp  WriteItem.cpp  WriteItem.test.cpp  algorithm.test.cpp  args.cpp  args.test.cpp  bytes.cpp  bytes.test.cpp  digest.cpp  digest.test.cpp  encoding.cpp  encoding.test.cpp  endian.cpp  exception.cpp  (+21 more)
src/linux/sfz/: ref-count.cpp
src/mac/sfz/: ref-count.cpp
src/posix/sfz/: Io.cpp  MappedFile.cpp  Os.cpp  PosixFormatter.cpp  ScopedFd.cpp  error.cpp  error.hpp  file.cpp  io.cpp  os.cpp  posix-format.cpp  posix-format.hpp
src/sfz/: BinaryReader.cpp  BinaryWriter.cpp  Bytes.cpp  CString.cpp  Encoding.cpp  Exception.cpp  Format.cpp  Formatter.cpp  Formatter.test.cpp  Io.cpp  MappedFile.cpp  NetworkBytes.cpp  Os.cpp  PosixFormatter.cpp  PrintItem.cpp  PrintItem.test.cpp  ReadItem.test.cpp  ReferenceCounted.cpp  ScopedFd.cpp  Sha1.cpp  Sha1.test.cpp  String.cpp  String.test.cpp  StringUtilities.cpp  WriteItem.cpp  WriteItem.test.cpp
src/win/sfz/: error.cpp  error.hpp  file.cpp  os.cpp  win.hpp
